RESOLVED FIXED162802
Web Inspector: Stepping over/out of a function sometimes resumes instead of taking you to caller
https://bugs.webkit.org/show_bug.cgi?id=162802
Summary Web Inspector: Stepping over/out of a function sometimes resumes instead of t...
Joseph Pecoraro
Reported 2016-09-30 12:32:10 PDT
Summary: Stepping over/out of a function sometimes resumes instead of taking you to caller Steps to Reproduce: 1. Inspect http://bogojoker.com/shell 2. Set a breakpoint of "if (autoplay)" line in easySlider.min.js 3. Trigger breakpoint by clicking down arrow on page 4. Step Out => Expected to pause in caller, did not Notes: - Step-out reproduces the issue - Step-over (at the end of the function) reproduces the issue - Step-in (at the end of the function) DOES NOT reproduce the issue, it behaves as expected
Attachments
[PATCH] Proposed Fix (1.94 KB, patch)
2016-09-30 12:34 PDT, Joseph Pecoraro
mark.lam: review+
joepeck: commit-queue-
[PATCH] For Landing (With Test) (9.49 KB, patch)
2016-09-30 16:24 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-09-30 12:32:27 PDT
Joseph Pecoraro
Comment 2 2016-09-30 12:34:12 PDT
Created attachment 290364 [details] [PATCH] Proposed Fix
Mark Lam
Comment 3 2016-09-30 12:54:26 PDT
Comment on attachment 290364 [details] [PATCH] Proposed Fix r=me. I'll come take a look at the original test case with you.
Joseph Pecoraro
Comment 4 2016-09-30 16:22:06 PDT
Comment on attachment 290364 [details] [PATCH] Proposed Fix Thanks to Mark I was able to add a test case.
Joseph Pecoraro
Comment 5 2016-09-30 16:24:56 PDT
Created attachment 290404 [details] [PATCH] For Landing (With Test)
Joseph Pecoraro
Comment 6 2016-09-30 16:25:34 PDT
Comment on attachment 290404 [details] [PATCH] For Landing (With Test) View in context: https://bugs.webkit.org/attachment.cgi?id=290404&action=review > LayoutTests/inspector/debugger/stepping/stepping-pause-in-inner-step-to-parent.html:6 > +<button id="button">Click</button> Err, I can remove this button! Will land manually.
Joseph Pecoraro
Comment 7 2016-09-30 16:31:16 PDT
Note You need to log in before you can comment on or make changes to this bug.