Web Inspector: Stepping over/out of a function sometimes resumes instead of taking you to caller https://bugs.webkit.org/show_bug.cgi?id=162802 <rdar://problem/28569982>

Reviewed by Mark Lam.

Source/JavaScriptCore:

* debugger/Debugger.cpp:
(JSC::Debugger::stepOverStatement):
(JSC::Debugger::stepOutOfFunction):
Enable stepping mode when we start stepping.

LayoutTests:

* inspector/debugger/resources/log-pause-location.js:
(TestPage.registerInitializer.createLocation):
(TestPage.registerInitializer.window.setBreakpointsOnLinesWithBreakpointComment):
Helper to set breakpoints everywhere in a file that has a BREAKPOINT comment.

* inspector/debugger/stepping/stepping-pause-in-inner-step-to-parent-expected.txt: Added.
* inspector/debugger/stepping/stepping-pause-in-inner-step-to-parent.html: Added.
Test that stepping out and over end up in the parent. Before this change
we would never have made it back into entry and the test failed.

Canonical link: https://commits.webkit.org/180760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206693 268f45cc-cd09-0410-ab3c-d52691b4dbfc